# UrbanNavDataset

./: README.md
UrbanNav-HK-CHTunnel-20210518/: extrinsic.yaml
UrbanNav-HK-Data20190428/: camera_intrinsics.yaml
UrbanNav-HK-Deep-Urban-1/: extrinsic.yaml  xsens_imu_param.yaml
UrbanNav-HK-Harsh-Urban-1/: extrinsic.yaml
UrbanNav-HK-Medium-Urban-1/: extrinsic.yaml
UrbanNav-HK-Mongkok-20210518/: extrinsic.yaml
UrbanNav-HK-TST-20210517/: extrinsic.yaml  imu_xsens.yaml  zed2_intrinsics
UrbanNav-HK-Tunnel-1/: extrinsic.yaml
UrbanNav-HK-Whampoa-20210521/: extrinsic.yaml
doc/: GETTING_STARTED.md  RELATE_PUBLICATIONS.md
docs/: GETTING_STARTED.md  RELATED_PUBLICATIONS.md
tools/data_usage/: readme.md
tools/evaluation/gt_for_slam/: gt_slam_UrbanNav-HK-CHTunnel-20210518.csv  gt_slam_UrbanNav-HK-Mongkok-20210518.csv  gt_slam_UrbanNav-HK-TST-20210517.csv  gt_slam_UrbanNav-HK-Whampoa-20210521.csv  readme.md
tools/gt_vis/: convert_novatel_to_pose.py  load_novatel_data.py  readme.md  run_vehicle_path.py
tools/gt_vis/data/: UrbanNav_TST_GT.txt  UrbanNav_TST_GT_raw.txt  UrbanNav_whampoa.txt
tools/lidar2image/: CMakeLists.txt  main.cpp  readme.md
tools/lidar2image/data/: 2.pcd  2_pillar_car.pcd
